--- a/_config.yml
+++ b/_config.yml
@@ -25,9 +25,9 @@ description: >- # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: /Spatial-Toolbox-WebPage # the subpath of your site, e.g. /blog
-url: https://hobinjk-ptc.github.io # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: hobinjk
-github_username:  hobinjk-ptc
+url: https://ptcrealitylab.github.io # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: PTCRealityLab
+github_username: ptcrealitylab
 
 # Build settings
 theme: minima
