--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -50,9 +50,9 @@
         - title: API Reference
           url: /docs/develop/hardware-interfaces/api-reference
     - title: Spatial Nodes
-      url: /docs/spatial-nodes
+      url: /docs/develop/spatial-nodes
     - title: Spatial Blocks
-      url: /docs/spatial-blocks
+      url: /docs/develop/spatial-blocks
 - title: Tutorials
   url: /docs/tutorials
   sublinks:
@@ -69,3 +69,4 @@
       url: /docs/dive-deeper/data-model
     - title: Local vs Global Tools
       url: /docs/dive-deeper/local-vs-global-tools
+
