--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ theme: minima
 plugins:
   - jekyll-feed
 
-markdown: CommonMarkGhPages
+# markdown: CommonMarkGhPages
 
 # Exclude from processing.
 # The following items will not be processed, by default.
