--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -1,7 +1,7 @@
 # - title: About
 # url: /about
-- title: Blog
-  url: /
+# - title: Blog
+# url: /
 - title: Forum
   url: https://forum.spatialtoolbox.vuforia.com/
   absolute: true
