--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -65,8 +65,14 @@
 - title: Tutorials
   url: /docs/tutorials
   sublinks:
+    - title: How to Create an Object
+      url: /docs/use/connect-to-the-physical-world/create-object
     - title: Creating a Simple Tool
       url: /docs/develop/spatial-tools/tutorial
+    - title: Creating Context-Dependent Tools
+      url: /docs/tutorials/context-dependent-tools
+    - title: Creating a New Hardware Interface
+      url: /docs/develop/hardware-interfaces/tutorial
     - title: Adding Settings to a Hardware Interface
       url: /docs/tutorials/adding-settings-to-hardware-interface
 - title: Dive Deeper
