--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -75,6 +75,11 @@
       url: /docs/develop/hardware-interfaces/tutorial
     - title: Adding Settings to a Hardware Interface
       url: /docs/tutorials/adding-settings-to-hardware-interface
+    - title: Basic Interfaces Add-on
+      url: /docs/vuforia-spatial-basic-interfaces-addon
+      sublinks:
+        - title: Philips Hue
+          url: /docs/vuforia-spatial-basic-interfaces-addon/interfaces/philipsHue
     - title: Robotic Add-on
       url: /docs/vuforia-spatial-robotic-addon
       sublinks:
