--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: realityLab@ptc.com
 description: >- # this means to ignore newlines until "baseurl:"
   The Vuforia Spatial Toolbox and Vuforia Spatial Edge Server make up a shared research platform for exploring spatial computing.
 baseurl: / # the subpath of your site, e.g. /blog
-url: https://ptcrealitylab.github.io # the base hostname & protocol for your site, e.g. http://example.com
+url: https://spatialtoolbox.vuforia.com # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: PTCRealityLab
 github_username: ptcrealitylab
 
