--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -70,6 +70,8 @@
       url: /docs/develop/spatial-tools/tutorial
     - title: Creating Context-Dependent Tools
       url: /docs/tutorials/context-dependent-tools
+    - title: Creating 3D Tools with Three.js
+      url: /docs/tutorials/three-js-tool-tutorial
     - title: Creating a New Hardware Interface
       url: /docs/develop/hardware-interfaces/tutorial
     - title: Adding Settings to a Hardware Interface
