Remove Blog from header until there's more blogging to show off

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -3,8 +3,8 @@
 - title: Forum
   url: https://forum.spatialtoolbox.vuforia.com/
   absolute: true
-- title: Blog
-  url: /blog
+# - title: Blog
+#   url: /blog
 - title: Software
   url: /docs/download
   sublinks:
